[package]
name = "eth_trie"
version = "0.6.0"
authors = ["https://github.com/ethereum/eth-trie.rs/graphs/contributors"]
description = "Ethereum-compatible Merkle-Patricia Trie."
license = "Apache-2.0"
rust-version = "1.81.0"
edition = "2021"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]
repository = "https://github.com/ethereum/eth-trie.rs"
homepage = "https://github.com/ethereum/eth-trie.rs"
documentation = "https://docs.rs/eth_trie"

[dependencies]
alloy-primitives = { version = "1.0", features = ["rlp"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
hashbrown = "0.15"
keccak-hash = "0.11"
log = "0.4.16"
parking_lot = "0.12"

[dev-dependencies]
alloy-primitives = { version = "1.0", features = ["getrandom", "rlp"] }
rand = "0.9"
hex = "0.4.2"
criterion = "0.5.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
